[package]
name = "async_"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hyper = "0.14"
timer_future = { path = "libs/timer_future" }
tokio = { version = "1.15", features = ["full"] }
log = "0.4.14"
env_logger = "0.9"